# classy-json-schema

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/Controller/: CliController.cpp  CliController.h  GuiController.cpp  GuiController.h
src/Controller/Qt/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Model/: Setting.cpp  Setting.h
src/Repository/: JsonSchemaRepository.cpp  JsonSchemaRepository.h
src/Utility/: ClassCreateUtility.cpp  ClassCreateUtility.h  FileValidator.cpp  FileValidator.h
tests/templates/: DataModel.java  DataModel_java.jinja2
